# ORB_SLAM2_savemap

./: CMakeLists.txt  Dependencies.md  README.md  stdafx.h
Examples/RGB-D/: myCameraTrajectory1.txt  myCameraTrajectory2.txt  rgbd_SpritarLoc.INFO  rgbd_SpritarLoc.cc  test20190130-145209.17716  test20190130-145247.18037  test20190130-145446.18805  test20190130-145535.19220
SLAMConfigFiles/: my.yaml
include/: ASSERT.h  Config.hpp  Frame.h  KeyFrame.h  KeyFrameDatabase.h  Map.h  MapPoint.h  Optimizer.h  Structs.h  System.h  Tracking.h
src/: Frame.cc  KeyFrame.cc  KeyFrameDatabase.cc  LoopClosing.cc  Map.cc  MapPoint.cc  Optimizer.cc  System.cc  Tracking.cc  portable_binary_iarchive.cpp  portable_binary_oarchive.cpp
